SIVA-1044 Use ObjectNode instead of JSONObject in unit tests